замена механизма аутентификации на втроенный в uwsgi basicauth

--- a/logdok.ini
+++ b/logdok.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-plugins = python3
+plugins = python3,router_basicauth
 manage-script-name = True
 master = True
 processes = 4
@@ -13,3 +13,5 @@ check-static = static/
 static-index = index.html
 
 http-socket = :80
+
+route = ^/log basicauth:Logger Auth,foo:bar
